<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/location_label"
            style="@style/WeatherDataLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location_label_value"
            app:layout_constraintBottom_toBottomOf="@id/location_name"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/location_name" />

        <TextView
            android:id="@+id/location_name"
            style="@style/WeatherDataValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Xyz Zupanija" />

        <TextView
            android:id="@+id/weather_description_label"
            style="@style/WeatherDataLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weather_description_label_value"
            app:layout_constraintBottom_toBottomOf="@id/weather_description_value"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/weather_description_value" />

        <TextView
            android:id="@+id/weather_description_value"
            style="@style/WeatherDataValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/location_name"
            tools:text="Sunny" />

        <TextView
            android:id="@+id/temperature_label"
            style="@style/WeatherDataLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature_label_value"
            app:layout_constraintBottom_toBottomOf="@id/temperature_value"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/temperature_value" />

        <TextView
            android:id="@+id/temperature_value"
            style="@style/WeatherDataValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/weather_description_value"
            tools:text="22 °C" />

        <TextView
            android:id="@+id/humidity_label"
            style="@style/WeatherDataLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/humidity_label_value"
            app:layout_constraintBottom_toBottomOf="@id/humidity_value"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/humidity_value" />

        <TextView
            android:id="@+id/humidity_value"
            style="@style/WeatherDataValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/temperature_value"
            tools:text="90.1 %" />

        <TextView
            android:id="@+id/pressure_label"
            style="@style/WeatherDataLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pressure_label_value"
            app:layout_constraintBottom_toBottomOf="@id/pressure_value"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/pressure_value" />

        <TextView
            android:id="@+id/pressure_value"
            style="@style/WeatherDataValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/humidity_value"
            tools:text="1012 hPa" />

        <TextView
            android:id="@+id/wind_speed_label"
            style="@style/WeatherDataLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed_label_value"
            app:layout_constraintBottom_toBottomOf="@id/wind_speed_value"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/wind_speed_value" />

        <TextView
            android:id="@+id/wind_speed_value"
            style="@style/WeatherDataValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/pressure_value"
            tools:text="21.2 km/h" />

        <TextView
            android:id="@+id/lat_lon_label"
            style="@style/WeatherDataLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lat_lon_label_value"
            app:layout_constraintBottom_toBottomOf="@id/lat_lon_value"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/lat_lon_value" />

        <TextView
            android:id="@+id/lat_lon_value"
            style="@style/WeatherDataValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/wind_speed_value"
            tools:text="19.0, 21.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>