<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.ingemark.ficko.myweatherstation.ui.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/description_label_value"
            app:layout_constraintBottom_toTopOf="@id/location_name"
            app:layout_constraintEnd_toEndOf="@id/temperature_value"
            app:layout_constraintStart_toStartOf="@id/temperature_value" />

        <TextView
            android:id="@+id/location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/temperature_value"
            app:layout_constraintEnd_toEndOf="@id/temperature_value"
            app:layout_constraintStart_toStartOf="@id/temperature_value"
            tools:text="Dubrovacka zupanija" />

        <TextView
            android:id="@+id/temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/location_name_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="19.2 C" />

        <EditText
            android:id="@+id/location_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_input"
            android:gravity="center"
            android:hint="@string/location_name_input_hint"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/search_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/search_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:onClick="@{ () -> activity.buttonClicked() }"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/search_weather_info_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>